<resources>
    <string name="app_name">BarberInHomeBeta</string>
    <string name="cadastrar">Register</string>
    <string name="repense_a_hora_de_cortar_o_cabelo_e_fazer_a_barba">Repent the time to cut hair and shave</string>
    <string name="crie_sua_conta_gratis">Create Your Free Account</string>
    <string name="j_tenho_conta">I already have account</string>
    <string name="title_activity_mapa">Service area</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_top">NavigationTopActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Name</string>
    <string name="celular">Cel</string>
    <string name="senha">Pass</string>
    <string name="e_mail">Email</string>
    <string name="salvar">Save</string>
    <string name="sair">Sign out</string>
    <string name="_5_anos_de_experi_ncia">5 years of experience</string>
    <string name="_4_9">4.9</string>
    <string name="ligar">Call</string>
    <string name="compartilhar">Share</string>
    <string name="regi_o_atendimento">Service area</string>
    <string name="insira_seu_e_mail_e_senha">Enter your email and password</string>
    <string name="entrar">Enter</string>
    <string name="vers_o">Version</string>
    <string name="desenvolvedor">Developer</string>
    <string name="t1">Yup! is time to cut the hair</string>
    <string name="d1">Let s do this in an easy way! 2 steps</string>
    <string name="t2">Choose the barber, day and time</string>
    <string name="d2">Do not worry, he was handpicked by our team</string>
    <string name="t3">After making the payment a barber will come to you</string>
    <string name="d3">You'll look good without queues, without traffic and without leaving home.</string>
    <string name="t4">Now, just enjoy the new look.</string>
    <string name="d4">Do not forget to make your assessment on the barber</string>
</resources>
