<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultApp"
    tools:context="br.com.barberinhome.barberinhomebeta.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="145dp"
        android:text="@string/insira_seu_e_mail_e_senha"
        android:textAlignment="center"
        android:textColor="@color/background_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/background_white"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:shadowColor="@color/background_white"
        android:textColor="@color/background_white"
        android:textColorHighlight="@color/background_white"
        android:textColorHint="@color/background_white"
        android:textColorLink="@color/background_white"
        app:layout_constraintBottom_toTopOf="@+id/btSalvarCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" android:drawableStart="@drawable/ic_lock_black_24dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/background_white"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/background_white"
        android:textColor="@color/background_white"
        android:textColorHighlight="@color/background_white"
        android:textColorHint="@color/background_white"
        android:textColorLink="@color/background_white"
        app:layout_constraintBottom_toTopOf="@+id/etSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" android:drawableStart="@drawable/ic_email_black_24dp"/>

    <Button
        android:id="@+id/btSalvarCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/background_white"
        android:text="@string/entrar"
        android:textColor="@color/defaultApp"
        android:textColorLink="@color/background_white"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:indeterminateTint="@color/background_white"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btSalvarCadastro" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@color/common_google_signin_btn_text_dark_disabled" />
</android.support.constraint.ConstraintLayout>
